--- a/MVC/views/shop/product-list.ejs
+++ b/MVC/views/shop/product-list.ejs
@@ -22,6 +22,7 @@
                             <p class="product__description"><%= product.desc %></p>
                         </div>
                         <div class="card__actions">
+                            <a href="/product-detail/<%= product.id %>" class="btn">Details</a>
                             <form action="/cart" type="POST">
                                 <button class="btn">Add to Cart</button>
                             </form>
