--- a/MVC/views/shop/product-detail.ejs
+++ b/MVC/views/shop/product-detail.ejs
@@ -9,19 +9,17 @@
             <div class="grid">
                     <article class="card product-item">
                         <header class="card__header">
-                            <h1 class="product__title"><%= selectedProduct.title %></h1>
+                            <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= selectedProduct.imageUrl%>"
-                                alt="<%= selectedProduct.title %>">
+                            <img src="<%= product.imageUrl%>"
+                                alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price"><%= selectedProduct.price %></h2>
-                            <p class="product__description"><%= selectedProduct.desc %></p>
+                            <h2 class="product__price"><%= product.price %></h2>
+                            <p class="product__description"><%= product.desc %></p>
                         </div>
-                        <form action="/cart" method="POST">
-                            <button class="btn" type="submit">Add to cart</button>
-                        </form>
+                        <%- include('../includes/add-to-cart.ejs') %>
                     </article>
             </div>
     </main>
