--- a/MVC/views/admin/products.ejs
+++ b/MVC/views/admin/products.ejs
@@ -22,7 +22,7 @@
                             <p class="product__description"><%= product.desc %></p>
                         </div>
                         <div class="card__actions">
-                            <a href="/admin/edit-product/1" class="btn">Edit</a>
+                            <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
                             <form action="/admin/delete-product" type="POST">
                                 <button class="btn" type="submit">Delete</button>
                             </form>
