--- a/MVC/views/admin/edit-product.ejs
+++ b/MVC/views/admin/edit-product.ejs
@@ -7,7 +7,7 @@
     <%- include('../includes/navigation.ejs')%>
 
     <main>
-        <form class="product-form" action="/admin/<% if (isEdit) { %> edit-product <% } else { %> product <% } %>" method="POST">
+        <form class="product-form" action="/admin/<% if (isEdit) { %>update-product<% } else { %>product<% } %>" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" value="<%= product.title %>">
@@ -24,7 +24,9 @@
                 <label for="desc">Description</label>
                 <textarea name="desc" id="desc" rows="5"><%= product.desc %></textarea>
             </div>
-
+            <% if(isEdit) { %>
+                <input type="hidden" value="<%= product.id%>" name="id"/>
+            <% } %>
             <button class="btn" type="submit"><% if (isEdit) { %> Update Product <% } else { %> Add Product <% } %></button>
         </form>
     </main>
