--- a/MVC/views/admin/products.ejs
+++ b/MVC/views/admin/products.ejs
@@ -14,16 +14,17 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageUrl%>"
+                            <img src="<%= product.imageUrl %>"
                                 alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price"><%= product.price %></h2>
+                            <h2 class="product__price">$<%= product.price %></h2>
                             <p class="product__description"><%= product.desc %></p>
                         </div>
                         <div class="card__actions">
-                            <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
-                            <form action="/admin/delete-product" type="POST">
+                            <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
+                            <form action="/admin/delete-product" method="POST">
+                                <input type="hidden" value="<%= product.id %>" name="productId"/>
                                 <button class="btn" type="submit">Delete</button>
                             </form>
                         </div>
