--- a/MVC/views/shop/cart.ejs
+++ b/MVC/views/shop/cart.ejs
@@ -1,7 +1,25 @@
 <%- include('../includes/head.ejs')%>
-</head>
+    </head>
 
-<body>
-    <%- include('../includes/navigation.ejs')%>
-    <%- include('../includes/end.ejs')%>
-    
+    <body>
+        <%- include('../includes/navigation.ejs')%>
+            <main>
+                <% if(products.length) { %>
+                    <ul>
+                        <% products.forEach(cartProduct => { %>
+                            <li>
+                                <p><%= cartProduct.product.title %>(<%= cartProduct.qty %>)</p>
+                                <form action="/cart-delete-item" method="post" >
+                                    <input type="hidden" value="<%= cartProduct.product.id %>" name="productId"/>
+                                    <button type="submit" class="btn" >
+                                        Delete
+                                    </button>
+                                </form>
+                            </li>
+                        <% }) %>
+                    </ul>
+                    <% } else { %>
+                        <h1> No products in cart</h1>
+                        <% } %>
+            </main>
+            <%- include('../includes/end.ejs')%>
