--- a/mysql-sequelize/views/shop/cart.ejs
+++ b/mysql-sequelize/views/shop/cart.ejs
@@ -8,15 +8,21 @@
                     <ul>
                         <% products.forEach(cartProduct => { %>
                             <li>
-                                <p><%= cartProduct.product.title %>(<%= cartProduct.qty %>)</p>
+                                <p><%= cartProduct.title %>(<%= cartProduct.cartItem.quantity %>)</p>
                                 <form action="/cart-delete-item" method="post" >
-                                    <input type="hidden" value="<%= cartProduct.product.id %>" name="productId"/>
+                                    <input type="hidden" value="<%= cartProduct.id %>" name="productId"/>
                                     <button type="submit" class="btn" >
                                         Delete
                                     </button>
                                 </form>
                             </li>
                         <% }) %>
+                        <hr>
+                        <div class="centered">
+                            <form action="/create-order" method="post">
+                                <button type="submit" class="btn">Order Now</button>
+                            </form>
+                        </div>
                     </ul>
                     <% } else { %>
                         <h1> No products in cart</h1>
