--- a/mysql-sequelize/views/shop/orders.ejs
+++ b/mysql-sequelize/views/shop/orders.ejs
@@ -3,6 +3,21 @@
 
 <body>
     <%- include('../includes/navigation.ejs')%>
-    <h1>Orders</h1>
+    <% if (orders.length) { %>
+        <ul>
+            <% orders.forEach(order => { %>
+                <li>
+                    <h1># <%= order.id %></h1>
+                    <ul>
+                        <% order.products.forEach(product => { %>
+                            <li><%= product.title %> (<%= product.orderItem.quantity %>)</li>
+                        <% }) %>
+                    </ul>
+                </li>
+            <% }) %>
+        </ul>
+    <% } else { %>
+        <h1>Nothing orders</h1>
+    <% } %>
     <%- include('../includes/end.ejs')%>
     
