--- a/mongodb/views/admin/edit-product.ejs
+++ b/mongodb/views/admin/edit-product.ejs
@@ -25,7 +25,7 @@
                 <textarea name="description" id="description" rows="5"><%= product.description %></textarea>
             </div>
             <% if(isEdit) { %>
-                <input type="hidden" value="<%= product.id%>" name="id"/>
+                <input type="hidden" value="<%= product._id%>" name="id"/>
             <% } %>
             <button class="btn" type="submit"><% if (isEdit) { %> Update Product <% } else { %> Add Product <% } %></button>
         </form>
