--- a/mongodb/views/shop/product-list.ejs
+++ b/mongodb/views/shop/product-list.ejs
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/product-detail/<%= product.id %>" class="btn">Details</a>
+                                    <a href="/product-detail/<%= product._id %>" class="btn">Details</a>
                                     <%- include('../includes/add-to-cart.ejs', {product}) %>
                                 </div>
                             </article>
