--- a/mongodb/views/includes/add-to-cart.ejs
+++ b/mongodb/views/includes/add-to-cart.ejs
@@ -1,5 +1,5 @@
 <form action="/cart" method="POST">
     <button class="btn" type="submit">Add to
         cart</button>
-    <input type="hidden" name="productId" value="<%= product.id %>" />
+    <input type="hidden" name="productId" value="<%= product._id %>" />
 </form>
