--- a/mongodb/views/shop/cart.ejs
+++ b/mongodb/views/shop/cart.ejs
@@ -8,9 +8,9 @@
                     <ul>
                         <% products.forEach(cartProduct => { %>
                             <li>
-                                <p><%= cartProduct.title %>(<%= cartProduct.cartItem.quantity %>)</p>
+                                <p><%= cartProduct.title %>(<%= cartProduct.quantity %>)</p>
                                 <form action="/cart-delete-item" method="post" >
-                                    <input type="hidden" value="<%= cartProduct.id %>" name="productId"/>
+                                    <input type="hidden" value="<%= cartProduct._id %>" name="productId"/>
                                     <button type="submit" class="btn" >
                                         Delete
                                     </button>
