added cookies and session

--- a/mongoose/public/css/main.css
+++ b/mongoose/public/css/main.css
@@ -30,7 +30,9 @@ form {
 
 .main-header__nav {
   height: 100%;
-  display: none;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
   align-items: center;
 }
 
