--- a/mongoose/views/includes/navigation.ejs
+++ b/mongoose/views/includes/navigation.ejs
@@ -13,6 +13,7 @@
             <li class="main-header__item">
                 <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
             </li>
+            <% if (isAutheticated) { %>
             <li class="main-header__item">
                 <a class="<%= path === '/admin/add-product' ? 'active' : '' %>"
                     href="/admin/add-product">Add Product</a>
@@ -20,6 +21,17 @@
             <li class="main-header__item">
                 <a class="<%= path === '/admin/products' ? 'active' : '' %>"
                     href="/admin/products">Admin Products</a>
+            </li>
+            <% } %>
+        </ul>
+        <ul class="main-header__item-list">
+            <li class="main-header__item">
+                <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+            </li>
+            <li class="main-header__item">
+                <form action="/logout" method="POST">
+                    <button type="submit">Logout</button>
+                </form>
             </li>
         </ul>
     </nav>
